[package]
name = "dual-channel-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.12"
ethers = "2.0.14"
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk.git" }
tokio = { version = "1.38.1", features = ["full"] }

# telemetry
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#misc
dotenvy = "0.15.7"
