[package]
name = "dual-channel-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "*", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.12"
ethers = "2.0.14"
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk.git" }
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# telemetry
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#misc
dotenvy = "0.15.7"

[[bin]]
name = "bot"
path = "bin/bot.rs"

[[bin]]
name = "testing"
path = "bin/testing.rs"

[[bin]]
name = "hype-bot"
path = "bin/hype-bot.rs"

[[bin]]
name = "orderflow"
path = "bin/orderflow.rs"
